--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,13 @@
-# AWS Infrastructure Inventory Tool
+# AWS Infrastructure Inventory Tool .gitignore
 # Copyright (c) 2024
 # Licensed under MIT License
 
-# User-specific files
-~/.aws-inventory/
-*.log
-*.json
-*.yaml
-*.html
-*.txt
-
-# OS-specific files
-.DS_Store
-Thumbs.db
-
-# Editor-specific files
-.idea/
-.vscode/
-*.swp
-*.swo
-*~
-
-# Temporary files
-*.tmp
-*.temp
-*.bak
-
-# Build artifacts
+# Build and distribution
 dist/
 build/
 *.tar.gz
-*.zip
-
-# Test coverage
-coverage/
-.coverage
-htmlcov/
+*.deb
+*.rpm
 
 # Python
 __pycache__/
@@ -43,60 +15,85 @@ __pycache__/
 *$py.class
 *.so
 .Python
-env/
-venv/
-.env
-.venv
-
-# Node
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Go
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-*.test
-*.out
-
-# Rust
-/target/
-**/*.rs.bk
-Cargo.lock
-
-# Java
-*.class
-*.jar
-*.war
-*.ear
-*.logs
-*.iml
-.gradle/
 build/
+develop-eggs/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# Ruby
-*.gem
-*.rbc
-.bundle/
-vendor/bundle
-.rvmrc
-
-# PHP
-composer.phar
-vendor/
+# Virtual Environment
+venv/
+env/
+ENV/
 .env
-.env.*
-!.env.example
 
-# Misc
-*.bak
+# IDE
+.idea/
+.vscode/
 *.swp
 *.swo
 *~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Project specific
+.aws-inventory/
+*.log
+*.html
+*.json
+*.yaml
+!config.yaml
+!tests/*.json
+!tests/*.yaml
+
+# Test coverage
+.coverage
+htmlcov/
+.tox/
+.nox/
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
+
+# Documentation
+docs/_build/
+site/
+
+# Temporary files
 *.tmp
 *.temp
-*.log 
+*.bak
+*.swp
+*~
+
+# Local development
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Dependencies
+node_modules/
+vendor/ 
